--- a/webridge_website/Future_leader_coaching.html
+++ b/webridge_website/Future_leader_coaching.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,15 +17,20 @@
 
 
 </head>
+
 <body class="font-inter">
     <div class="w-full min-h-screen bg-white">
-
+        <!-- nav bar  -->
         <div class="bg-black navbar">
             <span class="text-white font-bold"><span class="v41_61">WeBridge</span></span>
             <nav class="space-x-4">
-                <a href="home.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
-                <a href="about.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT US</a>
-                <a href="services.html" class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
+                <a href="home.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
+                <a href="about.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT
+                    US</a>
+                <a href="services.html"
+                    class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
             </nav>
         </div>
 
@@ -33,42 +39,67 @@
         <section class="p-12">
             <div class="grid-container">
                 <div>
+
+                    <!-- main heading  -->
                     <div class="overlay-content ">
-                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">FUTURE LEADERS COACHING SERVICES</h1>
+                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">FUTURE LEADERS COACHING
+                            SERVICES</h1>
                         <br>
-                        <p class="max-w-lg text-gray-700 font-istok-web">We offer this specialized service of coaching to mid-level managers and future leaders of the organization. We work with the Top management of our clients and mentor and coach the identified middle managers. This program helps our clients to channelize the energies of their future leaders and help them get an external observation of the developmental needs of their future leaders. 
-                           <p>Future leaders coaching is focused on how to be mindful and inspirational with impactful communications. We guide them on how to be human to the junior colleagues and peers. It also involves coaching on how one would be a mentor to their juniors. We observe that this is a must for fast growing oranizations where the human aspect gets missed in the euphoria of high growth.
-                        </p> 
-                            </p>
+                        <!-- discription 1 -->
+                        <p class="max-w-lg text-gray-700 font-istok-web">We offer this specialized service of coaching
+                            to mid-level managers and future leaders of the organization. We work with the Top
+                            management of our clients and mentor and coach the identified middle managers. This program
+                            helps our clients to channelize the energies of their future leaders and help them get an
+                            external observation of the developmental needs of their future leaders.
+
+                        </p> <br>
+                        <p class="max-w-lg text-gray-700 font-istok-web">Future leaders coaching is focused on how to be mindful and inspirational with impactful
+                            communications. We guide them on how to be human to the junior colleagues and peers.
+                            It also involves coaching on how one would be a mentor to their juniors.
+
+                        </p>
                     </div>
                 </div>
+                <!-- image 1 -->
                 <div>
                     <img src="images/coach.jpg" alt="Future_leader_coaching" class="w-auto h-auto ">
                 </div>
+                <!-- image 2 -->
                 <div>
-                    <img src="images/coaching2.jpg" alt="Future_leader_coaching" class="w-auto h-auto">
+                    <img src="images/future3.jpeg" alt="Future_leader_coaching" class="w-auto h-auto">
                 </div>
                 <div>
-        
-                    <ul class="mt-4 space-y-2 ">
-                        <li class=" text-lg font-semibold">We believe strong coaching is at the root of strong leadership. With good coaching, leaders and future leaders turn insights to action
-                            Our methodology of Coaching :
-                            </li>
-                        <li>1. Establishing the objective</li>
-                        <li>2. Understanding through assessment</li>
-                        <li>3. Identifying goals</li>
-                        <li>4. Following up with support</li>
+
+                    <!-- discription 2 -->
+                    <ul class="mt-4 space-y-2 text-gray-700 ">
+                        <p class="max-w-lg text-gray-700 font-istok-web"> We observe that this is a must for fast growing oranizations where
+                            the human aspect gets missed in the euphoria of high growth.We believe strong coaching is at
+                            the root of strong leadership. With good coaching, leaders and future leaders turn insights
+                            to action.
+                        </p>
+                        <li > Our methodology of Coaching :
+                        </li>
+                        <li>&emsp;1. Establishing the objective</li>
+                        <li>&emsp;2. Understanding through assessment</li>
+                        <li>&emsp;3. Identifying goals</li>
+                        <li>&emsp;4. Following up with support</li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <footer class="bg-black text-gray-400 p-4 text-center pl-4 pr-4">
-            <p>To contact us, please send your inquiry to the email address below, and we will get back to you.</p>
-            <p><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+        <!-- contact section  -->
+        <footer class="bg-black text-white py-8 pl-4 pr-4">
+            <div class="container mx-auto text-center">
+                <p class="text-gray-400 text-center mt-4">To contact us, please send your inquiry to the email address
+                    below, and we will get back to you.</p>
+                <p class="text-gray-400 text-center"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+            </div>
         </footer>
+
 
         <script src="css/script.js"></script>
     </div>
 </body>
+
 </html>
