--- a/webridge_website/HR_process_auto.html
+++ b/webridge_website/HR_process_auto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,16 +16,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
+
 <body class="font-inter">
     <div class="w-full min-h-screen bg-white">
 
-
+        <!-- navbar  -->
         <div class="bg-black  navbar">
             <span class="text-white font-bold"><span class="v41_61">WeBridge</span></span>
             <nav class="space-x-4">
-                <a href="home.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
-                <a href="about.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT US</a>
-                <a href="services.html" class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
+                <a href="home.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
+                <a href="about.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT
+                    US</a>
+                <a href="services.html"
+                    class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
             </nav>
         </div>
 
@@ -33,25 +39,35 @@
         <section class="p-12">
             <div class="grid-container">
                 <div>
+                    <!-- heading  -->
                     <div class="overlay-content ">
-                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">HR PROCESS AUTOMATION SERVICES</h1>
+                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">HR PROCESS AUTOMATION
+                            SERVICES</h1>
                         <br>
-                        <p class="max-w-lg text-gray-700 font-istok-web">We take pride in our understanding of HR process Automation and improve an organizations’ HR department efficiency by 2x to 5x
-                            </p>
-                            <p class="max-w-lg text-gray-700 font-istok-web">Through HR automation, organizations can design, streamline, integrate, and deploy necessary services swiftly at a considerably lower cost. If implemented right, HR automation can reap indispensable benefits.  </p>
+                        <!-- discription 1 -->
+                        <p class="max-w-lg text-gray-700 font-istok-web">We take pride in our understanding of HR
+                            process Automation and improve an organizations’ HR department efficiency by 2x to 5x.
+                        </p>
+                        <br>
+                        <p class="max-w-lg text-gray-700 font-istok-web">Through HR automation, organizations can
+                            design, streamline, integrate, and deploy necessary services swiftly at a considerably lower
+                            cost. If implemented right, HR automation can reap indispensable benefits. </p>
                     </div>
                 </div>
+                <!-- image 1 -->
                 <div>
-                    <img src="images/hr1.png" alt="Future_leader_coaching" class="w-auto h-auto ">
+                    <img src="images/hr1.2.png" alt="Future_leader_coaching" class="w-auto h-auto ">
                 </div>
+                <!-- image 2 -->
                 <div>
                     <img src="images/hr2.jpg" alt="Future_leader_coaching" class="w-auto h-auto ">
                 </div>
+                <!-- discription 2 -->
                 <div>
-        
-                    <ul class="mt-4 space-y-2 ">
-                        <li class=" text-lg font-semibold">Here are nine key benefits of HR automation:
-                            </li>
+
+                    <ul class="mt-4 space-y-2 max-w-lg text-gray-700 font-istok-web">
+                        <li>Here are nine key benefits of HR automation:
+                        </li>
                         <li>1. Improve productivity due to quick processing and data sharing</li>
                         <li>2. Reduce employee turnover due to heightened employee engagement</li>
                         <li>3. Slash down storage and printing costs associated with paper-based processing</li>
@@ -66,12 +82,18 @@
             </div>
         </section>
 
-        <footer class="bg-black text-gray-400 p-4 pl-4 pr-4 text-center">
-            <p>To contact us, please send your inquiry to the email address below, and we will get back to you.</p>
-            <p><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+        <!-- contact details  -->
+        <footer class="bg-black text-white py-8 pl-4 pr-4">
+            <div class="container mx-auto text-center">
+                <p class="text-gray-400 text-center mt-4">To contact us, please send your inquiry to the email address
+                    below, and we will get back to you.</p>
+                <p class="text-gray-400 text-center"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+            </div>
         </footer>
+
 
         <script src="css/script.js"></script>
     </div>
 </body>
+
 </html>
