--- a/webridge_website/about.html
+++ b/webridge_website/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,17 +18,22 @@
 
 
 </head>
+
 <body class="font-inter">
     <div class="w-full min-h-screen bg-white">
 
         <!-- Navigation bar section  -->
-        <div class="navbar">
-            <span class="text-black font-bold"><span class="v41_61">WeBridge</span></span>
+        <div class="bg-black navbar">
+            <span class="text-white font-bold"><span class="v41_61">WeBridge</span></span>
             <nav class="space-x-4">
-                
-                <a href="home.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
-                <a href="about.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT US</a>
-                <a href="services.html" class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
+
+                <a href="home.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
+                <a href="about.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT
+                    US</a>
+                <a href="services.html"
+                    class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
             </nav>
         </div>
 
@@ -37,31 +43,46 @@
                 <div class="overlay-content">
                     <h1 class=" text-1xl md:text-2xl text-black font-bold font-bakbak-one  ">ABOUT US</h1>
                     <br>
-                    <p class=" max-w-lg  text-gray-700 font-istok-web">WeBridge Consulting is a boutique consulting firm which offers services in the area of Human Resources, Infrastructure and Compliances to Organizations .</p>
-                  <br>
-                    <p class=" max-w-lg  text-gray-700 font-istok-web">The founder , assisted by a strong team has 3 decades of corporate experience, mainly in the area of Human Resources, setting up companies from scratch and ramping up operations. The experience ranges across Industries like IT, ITES, BFSI, Media , Healthcare and education.</p>
-                <br>
-                <p class=" max-w-lg  text-gray-700 font-istok-web" >The dedicated team of WeBridge are trained to take care of each of their customer’s requirements with utmost attention to details.</p>
+                    <p class=" max-w-lg  text-gray-700 font-istok-web">WeBridge Consulting is a boutique consulting firm
+                        which offers services in the area of Human Resources, Infrastructure and Compliances to
+                        Organizations .The founder assisted by a strong team has 3 decades of corporate experience,
+                        mainly in the area of Human Resources, setting up companies from scratch and ramping up
+                        operations.</p>
+
+                    <br>
+                    <p class=" max-w-lg  text-gray-700 font-istok-web">The dedicated team of WeBridge are trained to
+                        take care of each of their customer’s requirements with utmost attention to details.</p>
+                    <br>
+                    <ul class="text-gray-700">
+                        <li> The experience ranges across Industries like:
+                        </li>
+                        <li>&emsp;1. IT</li>
+                        <li>&emsp;2. ITES</li>
+                        <li>&emsp;3. BFSI</li>
+                        <li>&emsp;4. Media </li>
+                        <li>&emsp;5. Healthcare </li>
+                        <li>&emsp;6. Education </li>
+                    </ul>
                 </div>
             </div>
-            <div class="image-overlay bg-cover bg-center relative" style="background-image: url('images/aboutus2.webp');">
+            <div class="image-overlay bg-cover bg-center relative" style="background-image: url('images/ab.jpg');">
             </div>
         </div>
 
 
-                
+
     </div>
+    </div>
+
+
+    <!-- contact details    -->
+    <footer class="bg-black text-white py-8 pl-4 pr-4">
+        <div class="container mx-auto text-center">
+            <p class="text-gray-400 text-center mt-4">To contact us, please send your inquiry to the email address
+                below, and we will get back to you.</p>
+            <p class="text-gray-400 text-center"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
         </div>
-
-
-      <!-- contact details    -->
-        <footer class="bg-black text-white py-8 pl-4 pr-4">
-            <div class="container mx-auto text-center">
-                <!-- <p class="text-lg font-bold">Our team is committed to delivering valuable services under any circumstances and at any time.</p> -->
-                <p class="text-gray-400 mt-4">To contact us, please send your inquiry to the email address below, and we will get back to you.</p>
-                <p class="text-gray-400"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
-            </div>
-        </footer>
+    </footer>
 
     </div>
 
@@ -69,4 +90,5 @@
 
 
 </body>
+
 </html>
