--- a/webridge_website/Executive_search.html
+++ b/webridge_website/Executive_search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,15 +16,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
+
 <body class="font-inter">
     <div class="w-full min-h-screen bg-white">
-
+        <!-- navbar  -->
         <div class="bg-black navbar">
             <span class="text-white font-bold"><span class="v41_61">WeBridge</span></span>
             <nav class="space-x-4">
-                <a href="home.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
-                <a href="about.html" class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT US</a>
-                <a href="services.html" class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
+                <a href="home.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
+                <a href="about.html"
+                    class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT
+                    US</a>
+                <a href="services.html"
+                    class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
             </nav>
         </div>
 
@@ -32,43 +38,64 @@
         <section class="p-12">
             <div class="grid-container">
                 <div>
+                    <!-- heading  -->
                     <div class="overlay-content ">
-                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">EXECUTIVE SEARCH SERVICE</h1>
+                        <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one ">EXECUTIVE SEARCH SERVICE
+                        </h1>
                         <br>
-                        <p class="max-w-lg text-gray-700 font-istok-web">Our Executive Search function has built diverse leadership teams for MNCs, some leading Indian business houses, start- ups and mid sized companies.  
-                            We bring unique perspective in identifying the right leaders as per the client vision, we understand our clients completely. Our deep understanding of this domain helps our clients succeed.
-                            </p>
-                            <p class="max-w-lg text-gray-700 font-istok-web">We understand the criticality of our client requirements and design our search accordingly.
-                            </p>
+
+                        <!-- discription 1 -->
+                        <p class="max-w-lg text-gray-700 font-istok-web">Our Executive Search function has built diverse
+                            leadership teams for MNCs, some leading Indian business houses, start- ups and mid sized
+                            companies.
+                            We bring unique perspective in identifying the right leaders as per the client vision, we
+                            understand our clients completely. Our deep understanding of this domain helps our clients
+                            succeed.
+                        </p>
+                        <br>
+                        <p class="max-w-lg text-gray-700 font-istok-web">We understand the criticality of our client
+                            requirements and design our search accordingly.
+                        </p>
                     </div>
                 </div>
+                <!-- image 1 -->
                 <div>
-                    <img src="images/agile.png" alt="Recruiter Mentoring" class="w-50% h-50%">
+                    <img src="images/ag.jpg" alt="Recruiter Mentoring" class="w-50% h-50%">
                 </div>
+                <!-- image 2 -->
                 <div>
                     <img src="images/ex_search.jpeg" alt="Recruiter Mentoring" class="w-50% h-50%">
                 </div>
+                <!-- discription 2  -->
                 <div>
-        
+
                     <ul class="mt-4 space-y-2 ">
-                        <li class="  text-lg font-semibold">Our candidates are capable of enduring positive   impact on the business and organization. 
-                            Our Search approach is:
-                            </li>
-                        <li>1. Highly Agile</li>
-                        <li>2. Meticulous</li>
-                        <li>3. Confidential</li>
-                        <li>4. Trusted</li>
+                        <p>Our candidates are capable of enduring positive impact on
+                            the business  and 
+                        </p>
+                        <p>organization.</p>
+                        <p>Our Search approach is:</p>
+                        <li>&emsp;1. Highly Agile</li>
+                        <li>&emsp;2. Meticulous</li>
+                        <li>&emsp;3. Confidential</li>
+                        <li>&emsp;4. Trusted</li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <footer class="bg-black text-gray-400 p-4 text-center pl-4 pr-4">
-            <p>To contact us, please send your inquiry to the email address below, and we will get back to you.</p>
-            <p><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+        <!-- contact section  -->
+        <footer class="bg-black text-white py-8 pl-4 pr-4">
+            <div class="container mx-auto text-center">
+                <p class="text-gray-400 text-center mt-4">To contact us, please send your inquiry to the email address
+                    below, and we will get back to you.</p>
+                <p class="text-gray-400 text-center"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+            </div>
         </footer>
+
 
         <script src="css/script.js"></script>
     </div>
 </body>
+
 </html>
