--- a/webridge_website/services.html
+++ b/webridge_website/services.html
@@ -1,157 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeBridge Services</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Bakbak+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Istok+Web&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
-  </head>
-  <body class="font-inter">
-    <div class="w-full min-h-screen bg-white">
-      <!-- navigation bar  -->
-      <div class="navbar">
-        <span class="text-black font-bold"
-          ><span class="v41_61">WeBridge</span></span
-        >
-        <nav class="space-x-4">
-          <a
-            href="home.html"
-            class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out"
-            >HOME</a
-          >
-          <a
-            href="about.html"
-            class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out"
-            >ABOUT US</a
-          >
-          <a
-            href="services.html"
-            class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out"
-            >SERVICES</a
-          >
-        </nav>
-      </div>
 
-      <!-- services section -->
-      <div class="grid-container">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h1
-              class="text-1xl md:text-2xl text-black font-bold font-bakbak-one"
-            >
-              <span>SERVICES WE PROVIDE.</span>
-            </h1>
-            <br />
-            <ul class="text-lg max-w-lg text-gray-600 font-istok-web">
-              <li>
-                <a href="Executive_search.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-user-tie"></i> Executive Search
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="Future_leader_coaching.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-chalkboard-teacher"></i> Future
-                    Leaders Coaching
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="Custom_key_hire.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-500 ease-in-out"
-                  >
-                    <i class="fa-solid fa-key"></i> Key positions Hiring
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="HR_process_auto.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-cogs"></i> HR Process Automation
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="startup.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-rocket"></i> Start-up Mentoring
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="Recruiter_mentoring.html"
-                  ><button
-                    class="service-button bg-white border border-white hover:border-blue-500 hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-user-plus"></i> Recruiter Mentoring
-                    Service
-                  </button></a
-                >
-              </li>
-              <li>
-                <a href="setting_up.html"
-                  ><button
-                    class="service-button bg-white text-left border border-white hover:border-blue-500 hover:bg-black hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out"
-                  >
-                    <i class="fa-solid fa-building"></i> Setting up India
-                    captive operations for Foreign companies
-                  </button></a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div
-          class="image-overlay bg-cover bg-center relative"
-          style="background-image: url('images/services.jpg')"
-        ></div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WeBridge Services</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Bakbak+One&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Istok+Web&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+</head>
 
-      <!-- contact section  -->
-      <footer class="bg-black text-gray-400 p-4 pl-4 pr-4 text-center">
-        <p>
-          To contact us, please send your inquiry to the email address below,
-          and we will get back to you.
-        </p>
-        <p><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
-      </footer>
+<body class="font-inter">
+  <div class="w-full min-h-screen bg-white">
+    <!-- navigation bar  -->
+    <div class="bg-black navbar">
+      <span class="text-white font-bold"><span class="v41_61">WeBridge</span></span>
+      <nav class="space-x-4">
+        <a href="home.html"
+          class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">HOME</a>
+        <a href="about.html"
+          class="text-white text-1xl hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">ABOUT
+          US</a>
+        <a href="services.html"
+          class="text-white text-1xl pr-9 hover:text-blue-300 px-2 py-2 rounded-md transition duration-300 ease-in-out">SERVICES</a>
+      </nav>
     </div>
-    <script src="css/script.js"></script>
-  </body>
+
+    <!-- services section -->
+    <div class="grid-container">
+      <div class="overlay">
+        <div class="overlay-content">
+          <h1 class="text-1xl md:text-2xl text-black font-bold font-bakbak-one">
+            <span>SERVICES WE PROVIDE</span>
+          </h1>
+          <br />
+          <ul class=" text-sm md:text-lg max-w-lg text-gray-600 font-istok-web">
+            <li>
+              <a href="Executive_search.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-user-tie"></i> Executive Search
+                </button></a>
+            </li>
+            <li>
+              <a href="Future_leader_coaching.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-chalkboard-teacher"></i> Future
+                  Leaders Coaching
+                </button></a>
+            </li>
+            <li>
+              <a href="Custom_key_hire.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-500 ease-in-out">
+                  <i class="fa-solid fa-key"></i> Key positions Hiring
+                </button></a>
+            </li>
+            <li>
+              <a href="HR_process_auto.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-cogs"></i> HR Process Automation
+                </button></a>
+            </li>
+            <li>
+              <a href="startup.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-rocket"></i> Start-up Mentoring
+                </button></a>
+            </li>
+            <li>
+              <a href="Recruiter_mentoring.html"><button
+                  class="service-button bg-white border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-user-plus"></i> Recruiter Mentoring
+                  Service
+                </button></a>
+            </li>
+            <li>
+              <a href="setting_up.html"><button
+                  class="service-button bg-white text-left border border-white hover:bg-gray-400 hover:text-white font-medium py-1 px-4 transition duration-300 ease-in-out">
+                  <i class="fa-solid fa-building"></i> Setting up India
+                  captive operations for Foreign companies
+                </button></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="image-overlay bg-cover bg-center relative"
+        style="background-image: url('images/business\ meeting2_0.jpg')"></div>
+    </div>
+
+    <!-- contact section  -->
+    <footer class="bg-black text-white py-8 pl-4 pr-4">
+      <div class="container mx-auto text-center">
+        <p class="text-gray-400 text-center mt-4">To contact us, please send your inquiry to the email address below,
+          and we will get back to you.</p>
+        <p class="text-gray-400 text-center"><i class="fa-regular fa-envelope"></i>&ensp;Hello@webridge.com</p>
+      </div>
+    </footer>
+
+  </div>
+  <script src="css/script.js"></script>
+</body>
+
 </html>
